hiding tabs under construction, updating quotes updated wording on about page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Home
 ---
 
+
+
 <div class="logo-section">
   <img src="/assets/images/pipe_label_denning.svg" alt="Denning Water Solutions" class="top-logo">
 </div>
@@ -11,9 +13,10 @@ title: Home
   <div class="container">
     <img src="/assets/images/water_drop.jpg" alt="Professional Headshot" class="headshot">
     <h1>Alana Denning, PE</h1>
-    <p class="tagline">I know what words to google.</p>
+    <p class="about-subtitle">Water & Wastewater Treatment Engineering Consultant</p>
   </div>
 </div>
+
 
 <section id="services" class="services-section">
   <div class="container">
@@ -21,7 +24,7 @@ title: Home
     <div class="services-grid">
       <div class="service-item">
         <h3>🏭 FEED Studies</h3>
-        <p>Front End Engineering Design for advanced manufacturing site water infrastructure projects</p>
+        <p>Front End Engineering Design studies for advanced manufacturing site water infrastructure projects</p>
       </div>
       <div class="service-item">
         <h3>➡️ Process Design</h3>
@@ -72,7 +75,7 @@ title: Home
 }
 
 .landing-hero {
-  background: radial-gradient(circle at center 180px, #2c5f7a 0%, #2c5f7a 80%, #2b2d2f 100%);
+  background: linear-gradient(135deg, #2c5f7a 0%, #3d4a54 100%);
   color: white;
   padding: 120px 20px;
   text-align: center;
