--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
 
 <div class="landing-hero">
   <div class="container">
-    <img src="/assets/images/water_drop.jpg" alt="Professional Headshot" class="headshot">
+    <img src="/assets/images/ALD_Headshot.png" alt="Professional Headshot" class="headshot">
     <h1>Alana Denning, PE</h1>
     <p class="about-subtitle">Water & Wastewater Treatment Engineering Consultant</p>
   </div>
@@ -86,7 +86,7 @@ title: Home
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid white;
+  border: 5px solid white;
   margin: 0 auto 20px auto;
   box-shadow: 0 4px 15px rgba(0,0,0,0.3);
   display: block;
